fixed backend emails

--- a/src/modules/authentication/mails/forgot-password.ejs
+++ b/src/modules/authentication/mails/forgot-password.ejs
@@ -69,7 +69,7 @@
       <tr>
         <td>
           <p>
-            For security reasons, do not share this OTP with anyone. If you have any questions or encounter any issues, please contact our support team at [Support Email] or call [Support Phone Number].
+            For security reasons, do not share this OTP with anyone. If you have any questions or encounter any issues, please contact our support team by calling +234 811 707 4094.
           </p>
         </td>
       </tr>
@@ -90,22 +90,22 @@
       <tr>
         <td>
           <p>
-            [Your Company Name]
+            Fuelsgate
           </p>
         </td>
       </tr>
       <tr>
         <td>
-          <p>
-            [Your Company's Contact Information]
-          </p>
+          <a href="tel:+2348117074094">
+            +234 811 707 4094
+          </a>
         </td>
       </tr>
       <tr>
         <td>
-          <p>
-            [Your Company's Website]
-          </p>
+          <a href="https://fuelsgate.com" target="_blank">
+            www.fuelsgate.com
+          </a>
         </td>
       </tr>
     </tbody>
